--- a/package.json
+++ b/package.json
@@ -1,42 +1,79 @@
 {
-  "name": "recodereact",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "axios": "^0.21.0",
-    "bootstrap": "^4.5.3",
-    "class-autobind": "^0.1.4",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-loading-skeleton": "^2.1.1",
-    "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4"
+  "name": "reactrecode",
+  "version": "1.1.0",
+  "description": "Projeto React com intuito de passar conhecimentos",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/parkerror/reactrecode"
   },
+  "keywords": [
+    "react",
+    "reactjs",
+    "argon",
+    "argon-react",
+    "design",
+    "design-react",
+    "argon-design",
+    "argon-design-react",
+    "kit",
+    "react-kit",
+    "argon-design-system",
+    "argon-design-system-react",
+    "design-system-react"
+  ],
+  "author": "Marcus Souza => github.com/parkerror",
+  "license": "MIT",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-app-rewired  start",
+    "build": "react-app-rewired  build && gulp licenses",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-app-rewired  eject",
+    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
+    "compile-sass": "node-sass src/assets/scss/argon-design-system-react.scss src/assets/css/argon-design-system-react.css",
+    "minify-sass": "node-sass src/assets/scss/argon-design-system-react.scss src/assets/css/argon-design-system-react.min.css --output-style compressed",
+    "map-sass": "node-sass src/assets/scss/argon-design-system-react.scss src/assets/css/argon-design-system-react.css --source-map true"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
+  "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.10.5",
+    "axios": "^0.21.0",
+    "bootstrap": "4.3.1",
+    "class-autobind": "^0.1.4",
+    "classnames": "2.2.6",
+    "customize-cra": "^1.0.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "headroom.js": "0.11.0",
+    "moment": "^2.27.0",
+    "node-sass": "4.13.1",
+    "nouislider": "14.1.1",
+    "prettier": "^2.1.0",
+    "react": "16.12.0",
+    "react-app-rewired": "^2.1.6",
+    "react-datetime": "2.16.3",
+    "react-dom": "16.12.0",
+    "react-loading-skeleton": "^2.1.1",
+    "react-router": "5.1.2",
+    "react-router-dom": "5.1.2",
+    "react-scripts": "3.4.1",
+    "reactstrap": "8.4.1"
+  },
+  "devDependencies": {
+    "@types/markerclustererplus": "2.1.33",
+    "@types/react": "16.9.19",
+    "eslint-plugin-flowtype": "3.13.0",
+    "gulp": "4.0.2",
+    "gulp-append-prepend": "1.0.8",
+    "jquery": ">=3.5.0",
+    "typescript": "3.7.5"
   }
 }
